--- a/Client/Pages/Image.razor
+++ b/Client/Pages/Image.razor
@@ -1,7 +1,11 @@
 @page "/Image"
 @using System.Net
 @using System.Net.Http.Headers
+@using System.Text
+@using System.Text.Json.Serialization
 @using BlazorApp.Shared
+@using BlazorApp.Shared.Processing
+@using Newtonsoft.Json
 @inject HttpClient Http
 
 <h3>Image</h3>
@@ -25,9 +29,17 @@
         using (var memoryStream = new MemoryStream())
         {
             await selectedFile.OpenReadStream().CopyToAsync(memoryStream);
-            var byteContent = new ByteArrayContent(memoryStream.ToArray());
-            byteContent.Headers.ContentType = new MediaTypeHeaderValue("application/octet-stream");
-            response = await Http.PostAsync("/api/Image", byteContent);
+
+            var processRequest = new ImageProcessingRequest();
+            processRequest.base64ImageData = Convert.ToBase64String(memoryStream.ToArray());
+            
+            processRequest.Processes.Add(new ScaleProcess(100,100));
+            
+            string json = JsonConvert.SerializeObject(processRequest, Formatting.Indented, new JsonSerializerSettings 
+            { 
+                TypeNameHandling = TypeNameHandling.All 
+            });
+            response = await Http.PostAsync("/api/Image", new StringContent(json, Encoding.UTF8, "application/json"));
         }
         //post the image
 
