--- a/Client/Pages/Image.razor
+++ b/Client/Pages/Image.razor
@@ -1,6 +1,7 @@
 @page "/Image"
 @using System.Net
 @using System.Net.Http.Headers
+@using System.Reflection
 @using System.Text
 @using System.Text.Json.Serialization
 @using BlazorApp.Shared
@@ -14,12 +15,72 @@
 <button @onclick="ProcessImage"></button>
 <img src="@imageData" alt="test"/>
 
+<ul>
+
+    @foreach (var item in testList)
+    {
+        <li>@item</li>
+    }
+    
+</ul>
+
 @code {
+
+    List<string> testList = new List<string>();
+    
     private string imageData;
     private IBrowserFile selectedFile;
 
+    private async Task<Type> getTypeByName(string typeName)
+    {
+        Assembly assembly = Assembly.Load("Shared");
+        return assembly.GetType(typeName);
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var response = await Http.GetFromJsonAsync<List<string>>("/api/ImageInfo");
+
+        foreach (var typeString in response)
+        {
+            Type type = await getTypeByName(typeString);
+            Type t = typeof(ResizeProcess);
+
+            Console.WriteLine(type.Name);
+            foreach (var fieldInfo in type.GetProperties(BindingFlags.Instance | BindingFlags.Public | BindingFlags.NonPublic))
+            {
+                Console.WriteLine(fieldInfo.PropertyType + " " + fieldInfo.Name);
+            }
+            
+            testList.Add(typeString);
+            
+            Console.WriteLine();
+        }
+    }
+
+
+    private async void CreateOptions()
+    {
+        var response = await Http.GetFromJsonAsync<List<string>>("/api/ImageInfo");
+
+        foreach (var typeString in response)
+        {
+            Type type = await getTypeByName(typeString);
+            Type t = typeof(ResizeProcess);
+
+            Console.WriteLine(type.Name);
+            foreach (var fieldInfo in type.GetProperties(BindingFlags.Instance | BindingFlags.Public | BindingFlags.NonPublic))
+            {
+                Console.WriteLine(fieldInfo.PropertyType + " " + fieldInfo.Name);
+            }
+
+            Console.WriteLine();
+        }
+    }
+    
     private async Task ProcessImage()
     {
+        CreateOptions();
         var formData = new MultipartFormDataContent();
 
         var stream = selectedFile.OpenReadStream(selectedFile.Size);
@@ -33,7 +94,7 @@
             var processRequest = new ImageProcessingRequest();
             processRequest.base64ImageData = Convert.ToBase64String(memoryStream.ToArray());
             
-            processRequest.Processes.Add(new ScaleProcess(100,100));
+            processRequest.Processes.Add(new ResizeProcess(100,100));
             
             string json = JsonConvert.SerializeObject(processRequest, Formatting.Indented, new JsonSerializerSettings 
             { 
@@ -46,7 +107,7 @@
         if (response.IsSuccessStatusCode)
         {
             var responseData = await response.Content.ReadAsByteArrayAsync();
-            Console.WriteLine(Convert.ToBase64String(responseData));
+            //Console.WriteLine(Convert.ToBase64String(responseData));
             imageData = $"data:Image/png;base64,{Convert.ToBase64String(responseData)}";
         }
         
